--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
            </div>
           </div>
          </div>
-        <div class="employment">
+        <div class="self-employee">
            <div class="emp-head">
               <i class="fas fa-tools icon"></i>
               <h2>Employment</h2>
